--- a/index.html
+++ b/index.html
@@ -43,27 +43,31 @@
       </ul>
     </section>
 
-    <h2>Work</h2>
-    <ul>
-      <li>
-        <img src="./assets/images/lishui.png" alt="" />
-      </li>
-      <li>
-        <img src="./assets/images/strata.png" alt="" />
-      </li>
-      <li>
-        <img src="./assets/images/jiva.png" alt="" />
-      </li>
-      <li>
-        <img src="./assets/images/na.png" alt="" />
-      </li>
-      <li>
-        <img src="./assets/images/draft-ai.png" alt="" />
-      </li>
-      <li>
-        <img src="./assets/images/ra.png" alt="" />
-      </li>
-    </ul> 
+    <section>
+      <h2>Work</h2>
+      <div class="carousel full-bleed">
+        <ul class="carousel-list">
+          <li class="carousel-card carousel-card--mobile">
+            <img src="./assets/images/lishui.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--desktop">
+            <img src="./assets/images/strata.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--mobile">
+            <img src="./assets/images/jiva.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--desktop">
+            <img src="./assets/images/na.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--desktop">
+            <img src="./assets/images/draft-ai.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--mobile">
+            <img src="./assets/images/ra.png" alt="" />
+          </li>
+        </ul> 
+      </div>
+    </section>
 
     <section class="two-column">
       <h2>Contact</h2>
@@ -77,5 +81,8 @@
       <small>[ODD] © All rights reserved 2023</small>
     </footer>
   </main>
+
+  <!-- Scripts -->
+  <script src="./script.js"></script>
 </body>
 </html>
