--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
   <!-- Styles -->
   <link rel="stylesheet" href="./styles.css">
+  <!-- Libraries -->
+  <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 </head>
 <body>
   <main>
