--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
   <link rel="stylesheet" href="./styles.css">
   <!-- Libraries -->
   <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
 </head>
 <body>
+  <div id="sketch"></div>
+
   <main>
-    <h1>[ODD]</h1>
+    <h1 style="margin-bottom: 500px">[ODD]</h1>
 
     <p>// Office for Digital Design is the independent Trans - disciplinary practise of <span class="accent">Surya Narreddi</span> and a select network of collaborators.</p>
     <p>I work with emerging startups and established companies to shape digital products & form tangible narratives.</p>
@@ -85,6 +88,7 @@
   </main>
 
   <!-- Scripts -->
-  <script src="./script.js"></script>
+  <script src="./carousel.js"></script>
+  <script src="./sketch.js"></script>
 </body>
 </html>
