Add royal arion

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </section>
 
     <section class="two-column">
-    <h2>Companies I've worked with</h2>
+      <h2>Companies I've worked with</h2>
       <ul>
         <li>Hyundai</li>
         <li>MIT (CSAIL)</li>
         <li>Phillips</li>
         <li>City of Amsterdam</li>
-        <li>Northalley</li>
+        <li>Royal Arion</li>
         <li>UNSfutures</li>
         <li>UNSense</li>
       </ul>
