Change email address

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <section class="two-column">
       <h2>Contact</h2>
       <div style="width: 232px">
-        <a href="mailto:hello@officefordigital.design">hello@officefordigital.design</a>
+        <a href="mailto:narreddi.surya@gmail.com">narreddi.surya@gmail.com</a>
         <p>[ Book a FREE 15 Min call ]</p>
       </div>
     </section>
