Change message below the email

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h2>Contact</h2>
       <div style="width: 232px">
         <a href="mailto:narreddi.surya@gmail.com">narreddi.surya@gmail.com</a>
-        <p>[ Book a FREE 15 Min call ]</p>
+        <p>[ Get in touch by email ]</p>
       </div>
     </section>
 
