--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <h1 style="margin-bottom: 500px">[ODD]</h1>
 
-    <p>// Office for Digital Design is the independent Trans - disciplinary practise of <span class="accent">Surya Narreddi</span> and a select network of collaborators.</p>
+    <p>// Office for Digital Design is the independent trans - disciplinary practise of <span class="accent-yellow">Surya Narreddi</span> and collaborators <a class="accent-pink" href="https://www.figma.com/proto/FRCP0FYsSYrxvSErPXJCTc/Divya-%7C-Brand-%26-packaging-portfolio?page-id=0%3A1&type=design&node-id=4-3810&viewport=-1430%2C255%2C0.22&t=Z98MaG79BKARtW9U-1&scaling=contain&starting-point-node-id=4%3A3810&show-proto-sidebar=1" target="_blank">Divya Gupta</a> and <a class="accent-blue" href="https://www.figma.com/proto/b5jPI3EOrynBXhsBW9zeaO/Aishwarya-Khoche---Portfolio?page-id=0%3A1&type=design&node-id=65-3&viewport=417%2C290%2C0.04&t=HASXU2Wff3Tv3tzC-1&scaling=contain" target="_blank">Aishwarya Khoche</a>.</p>
     <p>I work with emerging startups and established companies to shape digital products & form tangible narratives.</p>
 
     <section class="two-column">
@@ -83,7 +83,7 @@
     </section>
 
     <footer>
-      <small>[ODD] © All rights reserved 2023</small>
+      <small>[ODD] © All rights reserved 2024</small>
     </footer>
   </main>
 
