--- a/index.html
+++ b/index.html
@@ -56,19 +56,31 @@
             <img src="./assets/images/lishui.png" alt="" />
           </li>
           <li class="carousel-card carousel-card--desktop">
-            <img src="./assets/images/strata.png" alt="" />
+            <img src="./assets/images/herbs-and-kettles.png" alt="" />
           </li>
           <li class="carousel-card carousel-card--mobile">
             <img src="./assets/images/jiva.png" alt="" />
           </li>
           <li class="carousel-card carousel-card--desktop">
+            <img src="./assets/images/strata.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--mobile">
+            <img src="./assets/images/chumbak.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--desktop">
             <img src="./assets/images/na.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--mobile">
+            <img src="./assets/images/curio.png" alt="" />
           </li>
           <li class="carousel-card carousel-card--desktop">
             <img src="./assets/images/draft-ai.png" alt="" />
           </li>
           <li class="carousel-card carousel-card--mobile">
             <img src="./assets/images/ra.png" alt="" />
+          </li>
+          <li class="carousel-card carousel-card--desktop">
+            <img src="./assets/images/sheets-and-watches.png" alt="" />
           </li>
         </ul> 
       </div>
